"""ORM models: the section 6 schema, with the naming convention that error mapping relies on.

Every constraint and index is named (ADR-305). Migrations are written by hand from this metadata
(BR-310), and `alembic check` proves the two agree. There are no ORM relationships: every load is an
explicit query, so nothing can lazy-load (`lazy="raise"` holds by construction).
"""

from datetime import date, datetime
from uuid import UUID

from sqlalchemy import (
    Boolean,
    CheckConstraint,
    Computed,
    Date,
    DateTime,
    ForeignKey,
    Index,
    Integer,
    MetaData,
    SmallInteger,
    Text,
    Uuid,
    text,
)
from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column

from app.domain import lists

NAMING_CONVENTION = {
    "ix": "ix_%(table_name)s_%(column_0_N_name)s",
    "uq": "uq_%(table_name)s_%(column_0_name)s",
    "ck": "ck_%(table_name)s_%(constraint_name)s",
    "fk": "fk_%(table_name)s_%(column_0_name)s_%(referred_table_name)s",
    "pk": "pk_%(table_name)s",
}

UUID_DEFAULT = text("gen_random_uuid()")
NOW = text("now()")


class Base(DeclarativeBase):
    metadata = MetaData(naming_convention=NAMING_CONVENTION)


class UserRow(Base):
    __tablename__ = "users"

    id: Mapped[UUID] = mapped_column(Uuid, primary_key=True, server_default=UUID_DEFAULT)
    name: Mapped[str] = mapped_column(Text)
    email: Mapped[str] = mapped_column(Text, unique=True)
    password_hash: Mapped[str] = mapped_column(Text)
    role: Mapped[str] = mapped_column(Text, server_default="developer")
    avatar_url: Mapped[str | None] = mapped_column(Text)
    theme: Mapped[str] = mapped_column(Text, server_default="system")
    given_name: Mapped[str | None] = mapped_column(Text)
    family_name: Mapped[str | None] = mapped_column(Text)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=NOW)
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=NOW)

    __table_args__ = (
        CheckConstraint(
            "char_length(name) BETWEEN 1 AND 80 AND name = btrim(name)", name="name_length"
        ),
        CheckConstraint(
            "given_name IS NULL OR "
            "(char_length(given_name) BETWEEN 1 AND 60 AND given_name = btrim(given_name))",
            name="given_name_length",
        ),
        CheckConstraint(
            "family_name IS NULL OR "
            "(char_length(family_name) BETWEEN 1 AND 60 AND family_name = btrim(family_name))",
            name="family_name_length",
        ),
        CheckConstraint(
            "email = lower(email) AND char_length(email) <= 254 AND position('@' in email) > 0",
            name="email_format",
        ),
        CheckConstraint("char_length(password_hash) > 0", name="password_hash_present"),
        CheckConstraint("role IN ('developer', 'lead')", name="role"),
        CheckConstraint(
            "avatar_url IS NULL OR "
            "(avatar_url LIKE 'https://%' AND char_length(avatar_url) <= 2048)",
            name="avatar_url",
        ),
        CheckConstraint("theme IN ('light', 'dark', 'system')", name="theme"),
        Index("ix_users_role", "role"),
    )


class ProjectRow(Base):
    __tablename__ = "projects"

    id: Mapped[UUID] = mapped_column(Uuid, primary_key=True, server_default=UUID_DEFAULT)
    name: Mapped[str] = mapped_column(Text)
    description: Mapped[str] = mapped_column(Text, server_default="")
    status: Mapped[str] = mapped_column(Text, server_default="planned")
    due_date: Mapped[date | None] = mapped_column(Date)
    owner_id: Mapped[UUID] = mapped_column(Uuid, ForeignKey("users.id", ondelete="RESTRICT"))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=NOW)
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=NOW)

    __table_args__ = (
        CheckConstraint(
            "char_length(name) BETWEEN 1 AND 80 AND name = btrim(name)", name="name_length"
        ),
        CheckConstraint("char_length(description) <= 2000", name="description_length"),
        CheckConstraint("status IN ('planned', 'active', 'on_hold', 'completed')", name="status"),
        Index("ix_projects_owner_id", "owner_id"),
        Index("ix_projects_status", "status"),
        Index(
            "ix_projects_name_trgm",
            "name",
            postgresql_using="gin",
            postgresql_ops={"name": "gin_trgm_ops"},
        ),
    )


class TaskRow(Base):
    __tablename__ = "tasks"

    id: Mapped[UUID] = mapped_column(Uuid, primary_key=True, server_default=UUID_DEFAULT)
    project_id: Mapped[UUID] = mapped_column(Uuid, ForeignKey("projects.id", ondelete="RESTRICT"))
    title: Mapped[str] = mapped_column(Text)
    description: Mapped[str] = mapped_column(Text, server_default="")
    status: Mapped[str] = mapped_column(Text, server_default="todo")
    priority: Mapped[str] = mapped_column(Text, server_default="medium")
    priority_rank: Mapped[int] = mapped_column(
        SmallInteger,
        Computed(
            "CASE priority WHEN 'urgent' THEN 4 WHEN 'high' THEN 3 WHEN 'medium' THEN 2 ELSE 1 END",
            persisted=True,
        ),
    )
    due_date: Mapped[date | None] = mapped_column(Date)
    assignee_id: Mapped[UUID | None] = mapped_column(
        Uuid, ForeignKey("users.id", ondelete="SET NULL")
    )
    completed_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=NOW)
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=NOW)

    __table_args__ = (
        CheckConstraint(
            "char_length(title) BETWEEN 1 AND 120 AND title = btrim(title)", name="title_length"
        ),
        CheckConstraint("char_length(description) <= 4000", name="description_length"),
        CheckConstraint("status IN ('todo', 'in_progress', 'in_review', 'done')", name="status"),
        CheckConstraint("priority IN ('low', 'medium', 'high', 'urgent')", name="priority"),
        CheckConstraint(
            "(status = 'done') = (completed_at IS NOT NULL)", name="completed_consistency"
        ),
        Index("ix_tasks_project_id_status", "project_id", "status"),
        Index(
            "ix_tasks_assignee_id_status",
            "assignee_id",
            "status",
            postgresql_where=text("assignee_id IS NOT NULL"),
        ),
        Index("ix_tasks_due_date_open", "due_date", postgresql_where=text("status <> 'done'")),
        Index("ix_tasks_due_date_id", "due_date", "id"),
        Index("ix_tasks_created_at_id", "created_at", "id"),
        Index(
            "ix_tasks_assignee_id_project_id",
            "assignee_id",
            "project_id",
            postgresql_where=text("assignee_id IS NOT NULL"),
        ),
        Index("ix_tasks_priority_rank_id", text("priority_rank DESC"), "id"),
        Index(
            "ix_tasks_title_trgm",
            "title",
            postgresql_using="gin",
            postgresql_ops={"title": "gin_trgm_ops"},
        ),
        Index(
            "ix_tasks_description_trgm",
            "description",
            postgresql_using="gin",
            postgresql_ops={"description": "gin_trgm_ops"},
        ),
    )


class ActivityRow(Base):
    __tablename__ = "activity"

    id: Mapped[UUID] = mapped_column(Uuid, primary_key=True, server_default=UUID_DEFAULT)
    actor_id: Mapped[UUID] = mapped_column(Uuid, ForeignKey("users.id", ondelete="CASCADE"))
    project_id: Mapped[UUID] = mapped_column(Uuid, ForeignKey("projects.id", ondelete="CASCADE"))
    task_id: Mapped[UUID | None] = mapped_column(Uuid, ForeignKey("tasks.id", ondelete="SET NULL"))
    type: Mapped[str] = mapped_column(Text)
    at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=NOW)

    __table_args__ = (
        CheckConstraint("type IN ('created', 'status_changed', 'completed')", name="type"),
        Index("ix_activity_at_id", text("at DESC"), text("id DESC")),
        Index("ix_activity_actor_id", "actor_id"),
        Index("ix_activity_project_id", "project_id"),
        Index("ix_activity_task_id", "task_id"),
    )


class RefreshTokenRow(Base):
    __tablename__ = "refresh_tokens"

    id: Mapped[UUID] = mapped_column(Uuid, primary_key=True, server_default=UUID_DEFAULT)
    user_id: Mapped[UUID] = mapped_column(Uuid, ForeignKey("users.id", ondelete="CASCADE"))
    family_id: Mapped[UUID] = mapped_column(Uuid)
    token_hash: Mapped[str] = mapped_column(Text, unique=True)
    expires_at: Mapped[datetime] = mapped_column(DateTime(timezone=True))
    used_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True))
    revoked_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True))

    __table_args__ = (
        CheckConstraint("char_length(token_hash) = 64", name="token_hash_length"),
        CheckConstraint("expires_at > created_at", name="expiry_after_creation"),
        Index("ix_refresh_tokens_user_id", "user_id"),
        Index("ix_refresh_tokens_family_id", "family_id"),
        Index("ix_refresh_tokens_expires_at", "expires_at"),
    )


class AiRequestRow(Base):
    __tablename__ = "ai_requests"

    id: Mapped[UUID] = mapped_column(Uuid, primary_key=True, server_default=UUID_DEFAULT)
    user_id: Mapped[UUID | None] = mapped_column(Uuid, ForeignKey("users.id", ondelete="SET NULL"))
    feature: Mapped[str] = mapped_column(Text)
    status: Mapped[str] = mapped_column(Text)
    provider: Mapped[str] = mapped_column(Text)
    model: Mapped[str | None] = mapped_column(Text)
    prompt_version: Mapped[str] = mapped_column(Text)
    input_tokens: Mapped[int | None] = mapped_column(Integer)
    output_tokens: Mapped[int | None] = mapped_column(Integer)
    latency_ms: Mapped[int | None] = mapped_column(Integer)
    error_code: Mapped[str | None] = mapped_column(Text)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True))

    __table_args__ = (
        CheckConstraint(
            "feature IN ('task_generation', 'prioritization', 'project_summary')", name="feature"
        ),
        CheckConstraint(
            "status IN ('pending', 'success', 'provider_error', 'invalid_output', "
            "'quota_blocked', 'disabled')",
            name="status",
        ),
        CheckConstraint("char_length(provider) <= 40", name="provider_length"),
        CheckConstraint("model IS NULL OR char_length(model) <= 100", name="model_length"),
        CheckConstraint("char_length(prompt_version) <= 60", name="prompt_version_length"),
        CheckConstraint("input_tokens IS NULL OR input_tokens >= 0", name="input_tokens_min"),
        CheckConstraint("output_tokens IS NULL OR output_tokens >= 0", name="output_tokens_min"),
        CheckConstraint("latency_ms IS NULL OR latency_ms >= 0", name="latency_ms_min"),
        CheckConstraint(
            "error_code IS NULL OR char_length(error_code) <= 60", name="error_code_length"
        ),
        Index("ix_ai_requests_user_id_created_at", "user_id", text("created_at DESC")),
        Index("ix_ai_requests_created_at", "created_at"),
    )


def _url_check(column: str, host: str | None = None) -> str:
    """https only, at most 2,048 characters, and (GitHub, LinkedIn) the provider's own host."""
    parts = [f"{column} IS NULL OR ({column} LIKE 'https://%' AND char_length({column}) <= 2048"]
    if host is not None:
        parts.append(f" AND {column} ~* '^https://([A-Za-z0-9-]+\\.)?{host}([/?#]|$)'")
    return "".join(parts) + ")"


def _trimmed(column: str, longest: int) -> str:
    return (
        f"{column} IS NULL OR "
        f"(char_length({column}) BETWEEN 1 AND {longest} AND {column} = btrim({column}))"
    )


class ProfileRow(Base):
    __tablename__ = "profiles"

    user_id: Mapped[UUID] = mapped_column(
        Uuid, ForeignKey("users.id", ondelete="CASCADE"), primary_key=True
    )
    discipline: Mapped[str] = mapped_column(Text)
    seniority: Mapped[str] = mapped_column(Text)
    employment_status: Mapped[str] = mapped_column(Text)
    company_name: Mapped[str | None] = mapped_column(Text)
    job_title: Mapped[str | None] = mapped_column(Text)
    country_code: Mapped[str] = mapped_column(Text)
    city: Mapped[str | None] = mapped_column(Text)
    time_zone: Mapped[str] = mapped_column(Text)
    headline: Mapped[str | None] = mapped_column(Text)
    about: Mapped[str] = mapped_column(Text, server_default="")
    github_url: Mapped[str | None] = mapped_column(Text)
    linkedin_url: Mapped[str | None] = mapped_column(Text)
    website_url: Mapped[str | None] = mapped_column(Text)
    show_professional_details: Mapped[bool] = mapped_column(Boolean, server_default=text("true"))
    terms_version: Mapped[str] = mapped_column(Text)
    terms_accepted_at: Mapped[datetime] = mapped_column(DateTime(timezone=True))
    age_confirmed_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=NOW)
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=NOW)

    __table_args__ = (
        CheckConstraint(lists.sql_in("discipline", lists.DISCIPLINES), name="discipline"),
        CheckConstraint(lists.sql_in("seniority", lists.SENIORITIES), name="seniority"),
        CheckConstraint(
            lists.sql_in("employment_status", lists.EMPLOYMENT_STATUSES), name="employment_status"
        ),
        CheckConstraint(_trimmed("company_name", 120), name="company_name_length"),
        CheckConstraint(_trimmed("job_title", 100), name="job_title_length"),
        CheckConstraint(
            "employment_status NOT IN ('employed', 'freelance') "
            "OR (company_name IS NOT NULL AND job_title IS NOT NULL)",
            name="employment_details",
        ),
        CheckConstraint("country_code ~ '^[A-Z]{2}$'", name="country_code"),
        CheckConstraint(_trimmed("city", 80), name="city_length"),
        CheckConstraint("char_length(time_zone) BETWEEN 1 AND 64", name="time_zone_length"),
        CheckConstraint(
            "headline IS NULL OR char_length(headline) BETWEEN 1 AND 120", name="headline_length"
        ),
        CheckConstraint("char_length(about) <= 500", name="about_length"),
        CheckConstraint(_url_check("github_url", "github\\.com"), name="github_url_https"),
        CheckConstraint(_url_check("linkedin_url", "linkedin\\.com"), name="linkedin_url_https"),
        CheckConstraint(_url_check("website_url"), name="website_url_https"),
        CheckConstraint(
            "terms_version = 'legacy' OR age_confirmed_at IS NOT NULL", name="age_confirmed"
        ),
    )


class ProfileSkillRow(Base):
    __tablename__ = "profile_skills"

    id: Mapped[UUID] = mapped_column(Uuid, primary_key=True, server_default=UUID_DEFAULT)
    user_id: Mapped[UUID] = mapped_column(Uuid, ForeignKey("users.id", ondelete="CASCADE"))
    name: Mapped[str] = mapped_column(Text)
    sort_order: Mapped[int] = mapped_column(SmallInteger)

    __table_args__ = (
        CheckConstraint(
            "char_length(name) BETWEEN 1 AND 30 AND name = btrim(name)", name="name_length"
        ),
        Index("ix_profile_skills_user_id", "user_id"),
        Index("uq_profile_skills_user_id_name_lower", "user_id", text("lower(name)"), unique=True),
    )
