erDiagram
  USERS ||--o{ ACTIVITY : actor_id
  PROJECTS ||--o{ ACTIVITY : project_id
  TASKS |o--o{ ACTIVITY : task_id
  USERS |o--o{ AI_REQUESTS : user_id
  USERS ||--o{ PROFILES : user_id
  USERS ||--o{ PROFILE_SKILLS : user_id
  USERS ||--o{ PROJECTS : owner_id
  USERS ||--o{ REFRESH_TOKENS : user_id
  USERS |o--o{ TASKS : assignee_id
  PROJECTS ||--o{ TASKS : project_id
  USERS {
    uuid id PK
    text name
    text email UK
    text password_hash
    text role
    text avatar_url
    text theme
    timestamptz created_at
    timestamptz updated_at
    text given_name
    text family_name
  }
  PROJECTS {
    uuid id PK
    text name
    text description
    text status
    date due_date
    uuid owner_id FK
    timestamptz created_at
    timestamptz updated_at
  }
  TASKS {
    uuid id PK
    uuid project_id FK
    text title
    text description
    text status
    text priority
    smallint priority_rank
    date due_date
    uuid assignee_id FK
    timestamptz completed_at
    timestamptz created_at
    timestamptz updated_at
  }
  ACTIVITY {
    uuid id PK
    uuid actor_id FK
    uuid project_id FK
    uuid task_id FK
    text type
    timestamptz at
  }
  PROFILES {
    uuid user_id PK,FK
    text discipline
    text seniority
    text employment_status
    text company_name
    text job_title
    text country_code
    text city
    text time_zone
    text headline
    text about
    text github_url
    text linkedin_url
    text website_url
    boolean show_professional_details
    text terms_version
    timestamptz terms_accepted_at
    timestamptz age_confirmed_at
    timestamptz created_at
    timestamptz updated_at
  }
  PROFILE_SKILLS {
    uuid id PK
    uuid user_id FK
    text name
    smallint sort_order
  }
